# ezeedo

./: .gitignore  AUTHORS  COPYING  INSTALL  LICENSE  LICENSE.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  configure.ac  org.y20k.ezeedo.gschema.xml  todo.txt
data/: Makefile.am  ezeedo.desktop.in  org.y20k.ezeedo.gschema.xml  org.y20k.ezeedo.gschema.xml.in
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scaleable/: Makefile.am
data/icons/hicolor/scaleable/apps/: Makefile.am
deb/: ABOUT THIS FOLDER  ezeedo_0.2-1_amd64.deb  ezeedo_0.2-1_i386.deb
src/: Makefile.am  categorylist.c  categorylist.h  core.c  core.h  helpers.c  helpers.h  main.c  preferences.c  preferences.h  start.c  start.h  startup.c  startup.h  taskentry.c  taskentry.h  tasklist.c  tasklist.h
