dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(ezeedo, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC

GLIB_GSETTINGS

PKG_CHECK_MODULES(EZEEDO, [gtk+-3.0 >= 3.14.1 ])

AC_OUTPUT([
Makefile
data/Makefile
data/ezeedo.desktop
data/icons/Makefile
data/icons/hicolor/Makefile
data/icons/hicolor/48x48/Makefile
data/icons/hicolor/scaleable/Makefile
data/icons/hicolor/48x48/apps/Makefile
data/icons/hicolor/scaleable/apps/Makefile
src/Makefile

])

